# ChangeLog for x11-misc/synergy
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/synergy/ChangeLog,v 1.19 2005/02/16 22:12:47 nakano Exp $

*synergy-1.2.2 (16 Feb 2005)

  16 Feb 2005; Masatomo Nakano <nakano@gentoo.org> +synergy-1.2.2.ebuild:
  Version bump.

*synergy-1.1.10 (05 Dec 2004)

  05 Dec 2004; Markus Nigbur <pyrania@gentoo.org> +synergy-1.1.10.ebuild:
  Version bump.

*synergy-1.1.9 (21 Nov 2004)

  21 Nov 2004; Karol Wojtaszek <sekretarz@gentoo.org>
  -synergy-0.9.13.ebuild, -synergy-1.0.0.ebuild, -synergy-1.0.14.ebuild,
  +synergy-1.1.9.ebuild:
  Version bump, ebuild clean up, fixed gcc-3.4 compile issues, bug #66450

  27 Oct 2004; <pyrania@gentoo.org> synergy-1.0.14.ebuild,
  synergy-1.0.2.ebuild, synergy-1.0.8.ebuild:
  Stable on sparc.

*synergy-1.1.8 (28 Sep 2004)

  28 Sep 2004; <pyrania@gentoo.org> +synergy-1.1.8.ebuild:
  Version bump.

  02 Jun 2004; Danny van Dyk <kugelfang@gentoo.org> synergy-1.0.14.ebuild:
  Marked ~amd64.

  11 Apr 2004; Markus Nigbur <pyrania@gentoo.org> synergy-0.9.13.ebuild,
  synergy-1.0.0.ebuild, synergy-1.0.14.ebuild, synergy-1.0.2.ebuild,
  synergy-1.0.8.ebuild:
  Marked stable on x86. Ebuild fixup.

  03 Apr 2004; Lars Weiler <pylon@gentoo.org> synergy-1.0.14.ebuild:
  stable on ppc

  15 Feb 2004; David Holm <dholm@gentoo.org> synergy-1.0.14.ebuild:
  Added to ~ppc.

  03 Nov 2003; Abhishek Amit <abhishek@gentoo.org> metadata.xml:
  Added metadata.xml

*synergy-1.0.14 (25 Aug 2003)

  25 Aug 2003; Stanislav Brabec <utx@gentoo.org> synergy-1.0.14.ebuild:
  Version bump.

  12 Jun 2003; <msterret@gentoo.org> synergy-0.9.13.ebuild,
  synergy-1.0.0.ebuild, synergy-1.0.2.ebuild:
  fix Header

*synergy-1.0.8 (15 May 2003)

  15 May 2003; Stanislav Brabec <utx@gentoo.org> synergy-1.0.8.ebuild:
  Version bump.

*synergy-1.0.2 (25 Jan 2003)

  18 Mar 2003; Jason Wever <weeve@gentoo.org> synergy-1.0.2.ebuild:
  Added ~sparc to keywords.
