@@ -1,14 +1,6 @@
-MD5 d1c2660fe94b3099cd340cc65507ff08 synergy-1.1.9.ebuild 899
-MD5 d0ecdd99086561091c85049bb95f15e1 synergy-1.2.2.ebuild 899
+MD5 2f8881f5bf2918f9bce05ae14eada6ca synergy-1.2.2.ebuild 898
 MD5 3c6bf347d4982c51098c56ef11fbfea3 synergy-1.0.8.ebuild 885
-MD5 c9132882f26ba7ed1e69fcc5ca8a4768 synergy-1.1.8.ebuild 899
-MD5 45e18c66c768c99f9e2ab806b6fb8aae synergy-1.0.2.ebuild 886
-MD5 f54181b66ae9d8a6dfe49458b82b181d synergy-1.1.10.ebuild 900
-MD5 af1cab4c2003623b14f8a611622c89f6 ChangeLog 2470
+MD5 838a5e49d3ffff489c8b71605c3081d7 ChangeLog 2689
 MD5 cdb11033a3fa6525334cecf938961c07 metadata.xml 166
-MD5 e16e4de9b2f7d161ffedb6c9d5da1379 files/digest-synergy-1.0.2 65
 MD5 8ffcb3014df887914537cbc4da99f7a8 files/digest-synergy-1.0.8 65
-MD5 476a08c4882a29bd2dc88b34f0473799 files/digest-synergy-1.1.8 65
-MD5 92000a72af98f15ab4f5cd908cb8ea76 files/digest-synergy-1.1.9 65
 MD5 3e52dad483caddfa64708897f220dd92 files/digest-synergy-1.2.2 65
-MD5 a153c362a9e67c9ed7f364dd56fa2cf4 files/digest-synergy-1.1.10 66
