@@ -1,1 +1,0 @@
-MD5 7e0f8a4c5148353f13e5b06bf52837da synergy-1.0.2.tar.gz 475190
