@@ -1,1 +1,0 @@
-MD5 05f92a7db8e6a7f1a62f2731826a7983 synergy-1.1.10.tar.gz 644612
