@@ -1,12 +1,12 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/synergy/synergy-1.2.2.ebuild,v 1.1 2005/02/16 22:12:47 nakano Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/synergy/synergy-1.2.2.ebuild,v 1.2 2005/03/30 18:14:06 nakano Exp $
 
 DESCRIPTION="Lets you easily share a single mouse and keyboard between multiple computers."
 SRC_URI="mirror://sourceforge/${PN}2/${P}.tar.gz"
 HOMEPAGE="http://synergy2.sourceforge.net/"
 LICENSE="GPL-2"
-KEYWORDS="~x86 ~sparc ~ppc ~amd64"
+KEYWORDS="x86 ~sparc ~ppc ~amd64"
 SLOT="0"
 IUSE=""
 
