@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/synergy
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/synergy/ChangeLog,v 1.19 2005/02/16 22:12:47 nakano Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/synergy/ChangeLog,v 1.20 2005/03/30 18:14:06 nakano Exp $
+
+  30 Mar 2005; Masatomo Nakano <nakano@gentoo.org> -synergy-1.0.2.ebuild,
+  -synergy-1.1.8.ebuild, -synergy-1.1.9.ebuild, -synergy-1.1.10.ebuild,
+  synergy-1.2.2.ebuild:
+  Marked stable on x86 and removed old ebuilds.
 
 *synergy-1.2.2 (16 Feb 2005)
 
